--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       font-family: Arial, sans-serif;
       color: white;
     }
-
     body {
       display: flex;
       flex-direction: column;
@@ -23,7 +22,6 @@
       justify-content: flex-start;
       overflow-x: hidden;
     }
-
     header {
       position: fixed;
       top: 0;
@@ -40,18 +38,15 @@
       box-sizing: border-box;
       transition: opacity 0.3s ease;
     }
-
     header.hidden {
       opacity: 0;
       pointer-events: none;
     }
-
     .logo-container img {
       height: 30px;
       width: auto;
       cursor: pointer;
     }
-
     .title {
       flex-grow: 1;
       text-align: center;
@@ -59,14 +54,12 @@
       color: #ffa500;
       font-weight: bold;
     }
-
     .youtube-icon-link img {
       height: 30px;
       width: auto;
       cursor: pointer;
       display: block;
     }
-
     .youtube-icon-link {
       display: inline-block;
       text-decoration: none;
@@ -74,7 +67,6 @@
       border: none;
       padding: 0;
     }
-
     main {
       margin-top: 60px;
       width: 100%;
@@ -83,7 +75,6 @@
       flex-direction: column;
       align-items: center;
     }
-
     .slider-container {
       position: relative;
       width: 50vw;
@@ -94,28 +85,23 @@
       background-color: #222;
       margin: 0 auto;
     }
-
     .slider-images, .fullscreen-slider {
       display: flex;
       height: 100%;
       transition: transform 0.5s ease-in-out;
     }
-
     .slider-images img, .fullscreen-slider img {
       width: 100%;
       height: 100%;
       flex-shrink: 0;
       cursor: pointer;
     }
-
     .slider-images img {
       object-fit: fill;
     }
-
     .fullscreen-slider img {
       object-fit: cover;
     }
-
     .arrow {
       position: absolute;
       top: 50%;
@@ -127,15 +113,12 @@
       cursor: pointer;
       z-index: 2;
     }
-
     .arrow.left {
       left: 10px;
     }
-
     .arrow.right {
       right: 10px;
     }
-
     .download-container {
       margin-top: 20px;
       padding: 16px 24px;
@@ -153,7 +136,6 @@
       font-size: 18px;
       flex-direction: column;
     }
-
     .download-button {
       background-color: #ffd700;
       border: none;
@@ -166,11 +148,9 @@
       transition: background-color 0.3s ease;
       margin: 4px 6px;
     }
-
     .download-button:hover {
       background-color: #ffcc00;
     }
-
     .fullscreen-overlay {
       position: fixed;
       top: 0;
@@ -183,7 +163,6 @@
       justify-content: center;
       z-index: 999;
     }
-
     .fullscreen-container {
       position: relative;
       width: 90vw;
@@ -193,7 +172,6 @@
       border: 4px solid #ffa500;
       overflow: hidden;
     }
-
     .fullscreen-arrow {
       position: absolute;
       top: 50%;
@@ -205,15 +183,12 @@
       cursor: pointer;
       z-index: 3;
     }
-
     .fullscreen-arrow.left {
       left: 10px;
     }
-
     .fullscreen-arrow.right {
       right: 10px;
     }
-
     .close-icon {
       position: absolute;
       top: 10px;
@@ -226,52 +201,42 @@
       z-index: 3;
       border-radius: 50%;
     }
-
-    /* RESPONSIVE PARA CELULARES */
     @media (max-aspect-ratio: 3/4) {
       .slider-container {
         width: 90vw;
         height: auto;
         aspect-ratio: 3 / 2;
       }
-
       .fullscreen-container {
         width: 95vw;
         max-height: 80vh;
         aspect-ratio: 3 / 2;
       }
-
       .title {
         font-size: 14px;
       }
-
       .download-container {
         width: 90vw;
         font-size: 16px;
         padding: 12px 16px;
       }
-
       .download-button {
         font-size: 13px;
         padding: 6px 10px;
       }
-
       header {
         height: 48px;
         padding: 0 12px;
       }
-
       .logo-container img,
       .youtube-icon-link img {
         height: 28px;
       }
-
       .arrow,
       .fullscreen-arrow {
         font-size: 24px;
         padding: 6px;
       }
-
       .close-icon {
         font-size: 24px;
         padding: 4px 8px;
@@ -280,17 +245,15 @@
   </style>
 </head>
 <body>
-
   <header id="header">
     <div class="logo-container">
       <img src="img/logo.webp" alt="Logo" />
     </div>
     <div class="title">Dragon Ball Z - Budokai Tenkaichi 4 Texture Pack HD</div>
-    <a href="https://www.youtube.com/@angel06-p7v" target="_blank" class="youtube-icon-link" aria-label="Visitar canal de YouTube">
+    <a href="https://www.youtube.com/@angel06-p7v"  target="_blank" class="youtube-icon-link" aria-label="Visitar canal de YouTube">
       <img src="img/youtube-icon.webp" alt="YouTube" />
     </a>
   </header>
-
   <main>
     <div>
       <div class="slider-container">
@@ -298,14 +261,12 @@
         <div class="arrow right" onclick="nextSlide()">&#10095;</div>
         <div class="slider-images" id="sliderImages"></div>
       </div>
-
       <div class="download-container">
         <div class="download-title">Descargas:</div>
         <div id="downloadContainer" class="download-buttons"></div>
       </div>
     </div>
   </main>
-
   <div class="fullscreen-overlay" id="fullscreenOverlay">
     <div class="fullscreen-container">
       <div class="fullscreen-arrow left" onclick="prevFullscreen()">&#10094;</div>
@@ -314,11 +275,9 @@
       <div class="fullscreen-slider" id="fullscreenSlider"></div>
     </div>
   </div>
-
   <!-- Scripts externos -->
   <script src="list.js"></script>
   <script src="img.js"></script>
-
   <script>
     const downloadContainer = document.getElementById("downloadContainer");
     const sliderImages = document.getElementById("sliderImages");
@@ -326,10 +285,11 @@
     const overlay = document.getElementById("fullscreenOverlay");
     const header = document.getElementById("header");
 
+    // Procesar list.js
     if (typeof listData !== 'undefined') {
-      const lines = listData.trim().split("\n").filter(Boolean);
+      const lines = listData.trim().split('\n').filter(Boolean);
       lines.forEach(line => {
-        const match = line.match(/-(.*?)\s+"(.*?)"/);
+        const match = line.match(/^-\s*(.*?)\s+"(.*?)"$/);
         if (match) {
           const name = match[1].trim();
           const url = match[2].trim();
@@ -342,35 +302,41 @@
       });
     }
 
+    // Procesar img.js
     let currentIndex = 0;
     let fullscreenIndex = 0;
     let isSliding = false;
     let isFullscreenSliding = false;
     let imageList = [];
-
     if (typeof imgData !== 'undefined') {
-      imageList = imgData.trim().split("\n").filter(Boolean).map(line => line.replace(/^-/, "").trim());
-
+      imageList = imgData.trim().split('\n').filter(Boolean).map(line => line.replace(/^-[\s\uFEFF\xA0]*/, "").trim());
       imageList.forEach((imgName, index) => {
         const img = document.createElement("img");
         img.src = `img/${imgName}`;
         img.alt = `Imagen ${index + 1}`;
+        img.onload = () => {
+          if (index === 0) {
+            showSlide(currentIndex);
+            updateFullscreenSlide();
+          }
+        };
         img.onclick = () => openFullscreen(index);
         sliderImages.appendChild(img);
-
         const imgFull = img.cloneNode();
         fullscreenSlider.appendChild(imgFull);
       });
     }
 
     function getSlideWidth() {
-      return sliderImages.children[0].clientWidth;
+      return sliderImages.children[0]?.clientWidth || 0;
     }
 
     function showSlide(index) {
       currentIndex = (index + imageList.length) % imageList.length;
       const slideWidth = getSlideWidth();
-      sliderImages.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
+      if (slideWidth > 0) {
+        sliderImages.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
+      }
     }
 
     function nextSlide() {
@@ -388,7 +354,7 @@
     }
 
     function getFullscreenWidth() {
-      return fullscreenSlider.children[0].clientWidth;
+      return fullscreenSlider.children[0]?.clientWidth || 0;
     }
 
     function openFullscreen(index) {
@@ -400,7 +366,9 @@
 
     function updateFullscreenSlide() {
       const slideWidth = getFullscreenWidth();
-      fullscreenSlider.style.transform = `translateX(-${fullscreenIndex * slideWidth}px)`;
+      if (slideWidth > 0) {
+        fullscreenSlider.style.transform = `translateX(-${fullscreenIndex * slideWidth}px)`;
+      }
     }
 
     function nextFullscreen() {
@@ -434,13 +402,13 @@
       updateFullscreenSlide();
     });
 
-    document.querySelector(".slider-container").addEventListener("wheel", (e) => {
+    document.querySelector(".slider-container")?.addEventListener("wheel", (e) => {
       e.preventDefault();
       if (isSliding) return;
       e.deltaY > 0 ? nextSlide() : prevSlide();
     });
 
-    document.querySelector(".fullscreen-container").addEventListener("wheel", (e) => {
+    document.querySelector(".fullscreen-container")?.addEventListener("wheel", (e) => {
       e.preventDefault();
       if (isFullscreenSliding) return;
       e.deltaY > 0 ? nextFullscreen() : prevFullscreen();
