--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       font-family: Arial, sans-serif;
       color: white;
     }
-
     body {
       display: flex;
       flex-direction: column;
@@ -23,7 +22,6 @@
       justify-content: flex-start;
       overflow-x: hidden;
     }
-
     header {
       position: fixed;
       top: 0;
@@ -40,18 +38,15 @@
       box-sizing: border-box;
       transition: opacity 0.3s ease;
     }
-
     header.hidden {
       opacity: 0;
       pointer-events: none;
     }
-
     .logo-container img {
       height: 30px;
       width: auto;
       cursor: pointer;
     }
-
     .title {
       flex-grow: 1;
       text-align: center;
@@ -59,14 +54,12 @@
       color: #ffa500;
       font-weight: bold;
     }
-
     .youtube-icon-link img {
       height: 30px;
       width: auto;
       cursor: pointer;
       display: block;
     }
-
     .youtube-icon-link {
       display: inline-block;
       text-decoration: none;
@@ -74,7 +67,6 @@
       border: none;
       padding: 0;
     }
-
     main {
       margin-top: 60px;
       width: 100%;
@@ -87,7 +79,7 @@
     /* Marco principal de imágenes */
     .slider-container {
       position: relative;
-      width: 45.45vw; /* 1/2.2 del ancho en modo 16:9 */
+      width: 45.45vw;
       aspect-ratio: 16 / 9;
       overflow: hidden;
       border: 2px solid #ffa500;
@@ -100,13 +92,13 @@
       .slider-container {
         width: 90vw;
         aspect-ratio: 16 / 9;
-        overflow: hidden;
       }
     }
 
     /* Carrusel de imágenes */
     .slider-images, .fullscreen-slider {
-      display: flex;
+      display: block;
+      white-space: nowrap;
       height: 100%;
       transition: transform 0.5s ease-in-out;
       will-change: transform;
@@ -114,7 +106,7 @@
 
     .slider-images img, .fullscreen-slider img {
       width: 100%;
-      height: 100%;
+      height: auto;
       flex-shrink: 0;
       cursor: pointer;
       object-fit: cover;
@@ -233,55 +225,6 @@
       cursor: pointer;
       z-index: 3;
       border-radius: 50%;
-    }
-
-    /* RESPONSIVE PARA CELULARES */
-    @media (max-aspect-ratio: 3/4) {
-      .slider-container {
-        width: 90vw;
-        aspect-ratio: 16 / 9;
-      }
-
-      .fullscreen-container {
-        width: 95vw;
-        aspect-ratio: 16 / 9;
-      }
-
-      .title {
-        font-size: 14px;
-      }
-
-      .download-container {
-        width: 90vw;
-        font-size: 16px;
-        padding: 12px 16px;
-      }
-
-      .download-button {
-        font-size: 13px;
-        padding: 6px 10px;
-      }
-
-      header {
-        height: 48px;
-        padding: 0 12px;
-      }
-
-      .logo-container img,
-      .youtube-icon-link img {
-        height: 28px;
-      }
-
-      .arrow,
-      .fullscreen-arrow {
-        font-size: 24px;
-        padding: 6px;
-      }
-
-      .close-icon {
-        font-size: 24px;
-        padding: 4px 8px;
-      }
     }
   </style>
 </head>
@@ -439,6 +382,23 @@
       header.classList.remove("hidden");
     }
 
+    function nextFullscreen() {
+      if (isFullscreenSliding) return;
+      isFullscreenSliding = true;
+      fullscreenIndex = (fullscreenIndex + 1) % imageList.length;
+      updateFullscreenSlide();
+      setTimeout(() => (isFullscreenSliding = false), 500);
+    }
+
+    function prevFullscreen() {
+      if (isFullscreenSliding) return;
+      isFullscreenSliding = true;
+      fullscreenIndex = (fullscreenIndex - 1 + imageList.length) % imageList.length;
+      updateFullscreenSlide();
+      setTimeout(() => (isFullscreenSliding = false), 500);
+    }
+
+    // Eventos
     window.addEventListener("resize", () => {
       if (overlay.style.display === "flex") {
         updateFullscreenSize();
@@ -452,6 +412,7 @@
       updateFullscreenSlide();
     });
 
+    // Scroll wheel
     document.querySelector(".slider-container")?.addEventListener("wheel", (e) => {
       e.preventDefault();
       if (isSliding) return;
