--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       font-family: Arial, sans-serif;
       color: white;
     }
+
     body {
       display: flex;
       flex-direction: column;
@@ -22,6 +23,7 @@
       justify-content: flex-start;
       overflow-x: hidden;
     }
+
     header {
       position: fixed;
       top: 0;
@@ -38,15 +40,18 @@
       box-sizing: border-box;
       transition: opacity 0.3s ease;
     }
+
     header.hidden {
       opacity: 0;
       pointer-events: none;
     }
+
     .logo-container img {
       height: 30px;
       width: auto;
       cursor: pointer;
     }
+
     .title {
       flex-grow: 1;
       text-align: center;
@@ -54,12 +59,14 @@
       color: #ffa500;
       font-weight: bold;
     }
+
     .youtube-icon-link img {
       height: 30px;
       width: auto;
       cursor: pointer;
       display: block;
     }
+
     .youtube-icon-link {
       display: inline-block;
       text-decoration: none;
@@ -67,6 +74,7 @@
       border: none;
       padding: 0;
     }
+
     main {
       margin-top: 60px;
       width: 100%;
@@ -76,10 +84,10 @@
       align-items: center;
     }
 
-    /* Marco principal de imágenes */
     .slider-container {
       position: relative;
-      width: 45.45vw;
+      width: 50vw;
+      max-width: 800px;
       aspect-ratio: 16 / 9;
       overflow: hidden;
       border: 2px solid #ffa500;
@@ -87,35 +95,25 @@
       margin: 0 auto;
     }
 
-    /* Ajuste para móviles */
-    @media (max-aspect-ratio: 3/4) {
-      .slider-container {
-        width: 90vw;
-        aspect-ratio: 16 / 9;
-      }
-    }
-
-    /* Carrusel de imágenes */
-    .slider-images, .fullscreen-slider {
-      display: block;
-      white-space: nowrap;
-      height: 100%;
-      transition: transform 0.5s ease-in-out;
-      will-change: transform;
-    }
-
-    .slider-images img, .fullscreen-slider img {
+    .slider-images {
+      position: relative;
       width: 100%;
-      height: auto;
-      flex-shrink: 0;
-      cursor: pointer;
-      object-fit: cover;
-      transform: translateZ(0);
-      backface-visibility: hidden;
-      will-change: transform;
+      height: 100%;
     }
 
-    /* Flechas del carrusel */
+    .slider-images img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      cursor: pointer;
+      display: none;
+      /* prepare for transform animation */
+      transform: translateX(0);
+    }
+
     .arrow {
       position: absolute;
       top: 50%;
@@ -126,6 +124,7 @@
       padding: 10px;
       cursor: pointer;
       z-index: 2;
+      user-select: none;
     }
 
     .arrow.left {
@@ -136,7 +135,6 @@
       right: 10px;
     }
 
-    /* Contenedor de descargas */
     .download-container {
       margin-top: 20px;
       padding: 16px 24px;
@@ -155,7 +153,6 @@
       flex-direction: column;
     }
 
-    /* Botones de descarga */
     .download-button {
       background-color: #ffd700;
       border: none;
@@ -173,7 +170,6 @@
       background-color: #ffcc00;
     }
 
-    /* Pantalla completa */
     .fullscreen-overlay {
       position: fixed;
       top: 0;
@@ -189,9 +185,29 @@
 
     .fullscreen-container {
       position: relative;
+      width: min(90vw, calc(90vh * 16 / 9));
       aspect-ratio: 16 / 9;
+      max-width: 1000px;
       border: 4px solid #ffa500;
       overflow: hidden;
+    }
+
+    .fullscreen-slider {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
+    .fullscreen-slider img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: none;
+      cursor: pointer;
+      transform: translateX(0);
     }
 
     .fullscreen-arrow {
@@ -204,6 +220,7 @@
       padding: 10px;
       cursor: pointer;
       z-index: 3;
+      user-select: none;
     }
 
     .fullscreen-arrow.left {
@@ -226,15 +243,66 @@
       z-index: 3;
       border-radius: 50%;
     }
+
+    /* RESPONSIVE PARA CELULARES */
+    @media (max-aspect-ratio: 3/4) {
+      .slider-container {
+        width: 90vw;
+        height: auto;
+        aspect-ratio: 16 / 9;
+      }
+
+      .fullscreen-container {
+        width: min(95vw, calc(95vh * 16 / 9));
+        aspect-ratio: 16 / 9;
+      }
+
+      .title {
+        font-size: 14px;
+      }
+
+      .download-container {
+        width: 90vw;
+        font-size: 16px;
+        padding: 12px 16px;
+      }
+
+      .download-button {
+        font-size: 13px;
+        padding: 6px 10px;
+      }
+
+      header {
+        height: 48px;
+        padding: 0 12px;
+      }
+
+      .logo-container img,
+      .youtube-icon-link img {
+        height: 28px;
+      }
+
+      .arrow,
+      .fullscreen-arrow {
+        font-size: 24px;
+        padding: 6px;
+      }
+
+      .close-icon {
+        font-size: 24px;
+        padding: 4px 8px;
+      }
+    }
   </style>
 </head>
 <body>
+
   <header id="header">
     <div class="logo-container">
       <img src="img/logo.webp" alt="Logo" />
     </div>
     <div class="title">Dragon Ball Z - Budokai Tenkaichi 4 Texture Pack HD</div>
-    <a href="https://www.youtube.com/@angel06-p7v"  target="_blank" class="youtube-icon-link" aria-label="Visitar canal de YouTube">
+    <a href="https://www.youtube.com/@angel06-p7v" target="_blank" class="youtube-icon-link" aria-label="Visitar canal de YouTube">
       <img src="img/youtube-icon.webp" alt="YouTube" />
     </a>
   </header>
@@ -246,6 +314,7 @@
         <div class="arrow right" onclick="nextSlide()">&#10095;</div>
         <div class="slider-images" id="sliderImages"></div>
       </div>
+
       <div class="download-container">
         <div class="download-title">Descargas:</div>
         <div id="downloadContainer" class="download-buttons"></div>
@@ -265,6 +334,7 @@
   <!-- Scripts externos -->
   <script src="list.js"></script>
   <script src="img.js"></script>
+
   <script>
     const downloadContainer = document.getElementById("downloadContainer");
     const sliderImages = document.getElementById("sliderImages");
@@ -272,11 +342,10 @@
     const overlay = document.getElementById("fullscreenOverlay");
     const header = document.getElementById("header");
 
-    // Cargar descargas desde list.js
     if (typeof listData !== 'undefined') {
-      const lines = listData.trim().split('\n').filter(Boolean);
+      const lines = listData.trim().split("\n").filter(Boolean);
       lines.forEach(line => {
-        const match = line.match(/^-\s*(.*?)\s+"(.*?)"$/);
+        const match = line.match(/-(.*?)\s+"(.*?)"/);
         if (match) {
           const name = match[1].trim();
           const url = match[2].trim();
@@ -291,90 +360,120 @@
 
     let currentIndex = 0;
     let fullscreenIndex = 0;
-    let isSliding = false;
-    let isFullscreenSliding = false;
     let imageList = [];
-    let loadedCount = 0;
 
-    // Cargar imágenes desde img.js
     if (typeof imgData !== 'undefined') {
-      imageList = imgData.trim().split('\n').filter(Boolean).map(line => line.replace(/^-[\s\uFEFF\xA0]*/, "").trim());
+      imageList = imgData.trim().split("\n").filter(Boolean).map(line => line.replace(/^-/, "").trim());
+
       imageList.forEach((imgName, index) => {
         const img = document.createElement("img");
         img.src = `img/${imgName}`;
         img.alt = `Imagen ${index + 1}`;
-        img.onload = () => {
-          loadedCount++;
-          if (loadedCount === imageList.length) {
-            showSlide(currentIndex);
-            updateFullscreenSlide();
-          }
-        };
-        img.onerror = () => console.error(`Error cargando ${imgName}`);
         img.onclick = () => openFullscreen(index);
         sliderImages.appendChild(img);
-        const imgFull = img.cloneNode();
+
+        const imgFull = document.createElement("img");
+        imgFull.src = `img/${imgName}`;
+        imgFull.alt = `Imagen ${index + 1}`;
         fullscreenSlider.appendChild(imgFull);
       });
     }
 
-    function getSlideWidth() {
-      return sliderImages.children[0]?.offsetWidth || 0;
+    function animateSlide(currentImg, nextImg, direction, containerType) {
+      // direction: 1 for next (leftwards), -1 for prev (rightwards)
+      // containerType: 'slider' or 'fullscreen'
+      currentImg.style.transition = 'transform 0.5s ease';
+      nextImg.style.transition = 'transform 0.5s ease';
+      // position nextImg off-screen
+      nextImg.style.display = 'block';
+      nextImg.style.transform = `translateX(${direction * 100}%)`;
+      // ensure currentImg is visible
+      currentImg.style.transform = 'translateX(0)';
+      // force reflow
+      void nextImg.offsetWidth;
+      // animate
+      currentImg.style.transform = `translateX(${-direction * 100}%)`;
+      nextImg.style.transform = 'translateX(0)';
+      // after transition, hide currentImg and reset transforms
+      const cleanup = (e) => {
+        if (e.target !== currentImg) return;
+        currentImg.style.display = 'none';
+        currentImg.style.transition = '';
+        currentImg.style.transform = 'translateX(0)';
+        nextImg.style.transition = '';
+        currentImg.removeEventListener('transitionend', cleanup);
+      };
+      currentImg.addEventListener('transitionend', cleanup);
     }
 
     function showSlide(index) {
-      currentIndex = (index + imageList.length) % imageList.length;
-      const slideWidth = getSlideWidth();
-      requestAnimationFrame(() => {
-        if (slideWidth > 0) {
-          sliderImages.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
-        }
-      });
+      if (!imageList.length) return;
+      const imgs = sliderImages.querySelectorAll("img");
+      const newIndex = (index + imageList.length) % imageList.length;
+      if (newIndex === currentIndex) return;
+      const currentImg = imgs[currentIndex];
+      const nextImg = imgs[newIndex];
+      // if first load (no display yet), just show
+      if (currentImg.style.display === '' || currentImg.style.display === 'none') {
+        imgs.forEach((img, i) => img.style.display = i === newIndex ? 'block' : 'none');
+      } else {
+        const direction = newIndex > currentIndex || (currentIndex === imageList.length - 1 && newIndex === 0) ? 1 : -1;
+        animateSlide(currentImg, nextImg, direction, 'slider');
+      }
+      currentIndex = newIndex;
     }
 
     function nextSlide() {
-      if (isSliding) return;
-      isSliding = true;
       showSlide(currentIndex + 1);
-      setTimeout(() => (isSliding = false), 500);
     }
 
     function prevSlide() {
-      if (isSliding) return;
-      isSliding = true;
       showSlide(currentIndex - 1);
-      setTimeout(() => (isSliding = false), 500);
     }
 
-    function getFullscreenWidth() {
-      return fullscreenSlider.children[0]?.offsetWidth || 0;
-    }
-
-    function updateFullscreenSlide() {
-      const slideWidth = getFullscreenWidth();
-      requestAnimationFrame(() => {
-        if (slideWidth > 0) {
-          fullscreenSlider.style.transform = `translateX(-${fullscreenIndex * slideWidth}px)`;
-        }
-      });
+    function updateFullscreenSlide(animated = false) {
+      if (!imageList.length) return;
+      const imgs = fullscreenSlider.querySelectorAll("img");
+      const newIndex = fullscreenIndex;
+      const currentImg = imgs.find((img, i) => img.style.display === 'block');
+      const nextImg = imgs[newIndex];
+      if (!currentImg) {
+        imgs.forEach((img, i) => img.style.display = i === newIndex ? 'block' : 'none');
+        return;
+      }
+      const currentIdx = Array.from(imgs).indexOf(currentImg);
+      if (newIndex === currentIdx) return;
+      const direction = newIndex > currentIdx || (currentIdx === imageList.length - 1 && newIndex === 0) ? 1 : -1;
+      animateSlide(currentImg, nextImg, direction, 'fullscreen');
     }
 
     function openFullscreen(index) {
       fullscreenIndex = index;
       overlay.style.display = "flex";
       header.classList.add("hidden");
-      updateFullscreenSize();
-      updateFullscreenSlide();
+      // hide all, then show current
+      const imgs = fullscreenSlider.querySelectorAll("img");
+      imgs.forEach((img, i) => img.style.display = i === index ? 'block' : 'none');
     }
 
-    function updateFullscreenSize() {
-      const container = document.querySelector(".fullscreen-container");
-      const vw = window.innerWidth;
-      const vh = window.innerHeight;
-      const desiredWidth = Math.min(vw * 0.95, (vh * 0.95) * (16 / 9));
-      const desiredHeight = desiredWidth / (16 / 9);
-      container.style.width = `${desiredWidth}px`;
-      container.style.height = `${desiredHeight}px`;
+    function nextFullscreen() {
+      if (!imageList.length) return;
+      const imgs = fullscreenSlider.querySelectorAll("img");
+      const newIndex = (fullscreenIndex + 1) % imageList.length;
+      const currentImg = imgs[fullscreenIndex];
+      const nextImg = imgs[newIndex];
+      animateSlide(currentImg, nextImg, 1, 'fullscreen');
+      fullscreenIndex = newIndex;
+    }
+
+    function prevFullscreen() {
+      if (!imageList.length) return;
+      const imgs = fullscreenSlider.querySelectorAll("img");
+      const newIndex = (fullscreenIndex - 1 + imageList.length) % imageList.length;
+      const currentImg = imgs[fullscreenIndex];
+      const nextImg = imgs[newIndex];
+      animateSlide(currentImg, nextImg, -1, 'fullscreen');
+      fullscreenIndex = newIndex;
     }
 
     function closeFullscreen() {
@@ -382,46 +481,19 @@
       header.classList.remove("hidden");
     }
 
-    function nextFullscreen() {
-      if (isFullscreenSliding) return;
-      isFullscreenSliding = true;
-      fullscreenIndex = (fullscreenIndex + 1) % imageList.length;
-      updateFullscreenSlide();
-      setTimeout(() => (isFullscreenSliding = false), 500);
-    }
-
-    function prevFullscreen() {
-      if (isFullscreenSliding) return;
-      isFullscreenSliding = true;
-      fullscreenIndex = (fullscreenIndex - 1 + imageList.length) % imageList.length;
-      updateFullscreenSlide();
-      setTimeout(() => (isFullscreenSliding = false), 500);
-    }
-
-    // Eventos
-    window.addEventListener("resize", () => {
-      if (overlay.style.display === "flex") {
-        updateFullscreenSize();
-        updateFullscreenSlide();
-      }
-      showSlide(currentIndex);
-    });
-
     window.addEventListener("load", () => {
-      showSlide(currentIndex);
-      updateFullscreenSlide();
+      // initial display for slider
+      const imgs = sliderImages.querySelectorAll("img");
+      imgs.forEach((img, i) => img.style.display = i === currentIndex ? 'block' : 'none');
     });
 
-    // Scroll wheel
-    document.querySelector(".slider-container")?.addEventListener("wheel", (e) => {
+    document.querySelector(".slider-container").addEventListener("wheel", (e) => {
       e.preventDefault();
-      if (isSliding) return;
       e.deltaY > 0 ? nextSlide() : prevSlide();
     });
 
-    document.querySelector(".fullscreen-container")?.addEventListener("wheel", (e) => {
+    document.querySelector(".fullscreen-container").addEventListener("wheel", (e) => {
       e.preventDefault();
-      if (isFullscreenSliding) return;
       e.deltaY > 0 ? nextFullscreen() : prevFullscreen();
     });
   </script>
